# xp-ffb-controller

./: .cproject  .mxproject  .project  CMakeLists.txt  stm32_tinyusb.ioc  stm32f3_toolchain.cmake
Core/Inc/: stm32f3xx_it.h  tusb_config.h
Core/Src/: ffb_descriptor.c  ffb_descriptor.h  main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
include/: ffb_main.h
src/: biquad.c  biquad.cpp  biquad.h  ffb_descriptor.c  ffb_descriptor.cpp  ffb_descriptor.h  ffb_effects.c  ffb_effects.cpp  ffb_effects.h  ffb_effects_calc.c  ffb_effects_calc.cpp  ffb_effects_calc.h  ffb_main.c  ffb_main.cpp  ffb_math.c  ffb_math.cpp  ffb_math.h  log.h  usb_callbacks.c  usb_callbacks.cpp
